Import of DAMS/Dancer-Plugin-Params-Normalization-0.50 from CPAN.
gitpan-cpan-distribution: Dancer-Plugin-Params-Normalization
gitpan-cpan-version:      0.50
gitpan-cpan-path:         DAMS/Dancer-Plugin-Params-Normalization-0.50.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,6 +1,13 @@
-Dancer::Plugin::Params::Normalization
 
-A Dancer plugin to normalize query parameters, like converting to lowercase,
-uppercase, or any other transformation.
+
+This archive contains the distribution Dancer-Plugin-Params-Normalization,
+version 0.50:
+
+  A plugin for normalizing query parameters in Dancer
+
+This software is copyright (c) 2011 by Damien "dams" Krotkine.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
 
 
